force-app/main/default/objects/MyCustomObject__c/MyCustomObject__c.object-meta.xml
<CustomObject>
    <label>MyCustomObject</label>
    <nameField>
        <label>My Custom Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyCustomObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>