force-app/main/default/objects/MyCustomObject__c/fields/AaliyahMohungoo__c.field-meta.xml
<CustomField>
    <fullName>AaliyahMohungoo__c</fullName>
    <label>Aaliyah Mohungoo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>