force-app/main/default/objects/MyCustomObject__c/fields/AkhileshRamchurn__c.field-meta.xml
<CustomField>
    <fullName>AkhileshRamchurn__c</fullName>
    <label>Akhilesh Ramchurn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>