force-app/main/default/objects/MyCustomObject__c/fields/AlfaazFulzulHossen__c.field-meta.xml
<CustomField>
    <fullName>AlfaazFulzulHossen__c</fullName>
    <label>Alfaaz Fulzul Hossen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>