force-app/main/default/objects/MyCustomObject__c/fields/AshitaChattoo__c.field-meta.xml
<CustomField>
    <fullName>AshitaChattoo__c</fullName>
    <label>Ashita Chattoo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>