force-app/main/default/objects/MyCustomObject__c/fields/AshitaGopaul__c.field-meta.xml
<CustomField>
    <fullName>AshitaGopaul__c</fullName>
    <label>Ashita Gopaul</label>
    <length>255</length>
    <type>Text</type>
</CustomField>