force-app/main/default/objects/MyCustomObject__c/fields/AsmaGhanty__c.field-meta.xml
<CustomField>
    <fullName>AsmaGhanty__c</fullName>
    <label>Asma Ghanty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>