force-app/main/default/objects/MyCustomObject__c/fields/AymanRummun__c.field-meta.xml
<CustomField>
    <fullName>AymanRummun__c</fullName>
    <label>Ayman Rummun</label>
    <length>255</length>
    <type>Text</type>
</CustomField>