force-app/main/default/objects/MyCustomObject__c/fields/BhavishNundoo__c.field-meta.xml
<CustomField>
    <fullName>BhavishNundoo__c</fullName>
    <label>Bhavish Nundoo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>