force-app/main/default/objects/MyCustomObject__c/fields/BhoovanyuDhomah__c.field-meta.xml
<CustomField>
    <fullName>BhoovanyuDhomah__c</fullName>
    <label>BhoovanyuDhomah</label>
    <length>255</length>
    <type>Text</type>
</CustomField>