force-app/main/default/objects/MyCustomObject__c/fields/ChevishBoodhun__c.field-meta.xml
<CustomField>
    <fullName>ChevishBoodhun__c</fullName>
    <label>Chevish Boodhun</label>
    <length>255</length>
    <type>Text</type>
</CustomField>