force-app/main/default/objects/MyCustomObject__c/fields/DeekshaLuchman__c.field-meta.xml
<CustomField>
    <fullName>DeekshaLuchman__c</fullName>
    <label>Deeksha Luchman</label>
    <length>255</length>
    <type>Text</type>
</CustomField>