force-app/main/default/objects/MyCustomObject__c/fields/DeekshitaBundhoo__c.field-meta.xml
<CustomField>
    <fullName>DeekshitaBundhoo__c</fullName>
    <label>Deekshita Bundhoo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>