force-app/main/default/objects/MyCustomObject__c/fields/DevashishOodun__c.field-meta.xml
<CustomField>
    <fullName>DevashishOodun__c</fullName>
    <label>Devashish Oodun</label>
    <length>255</length>
    <type>Text</type>
</CustomField>