force-app/main/default/objects/MyCustomObject__c/fields/IrfanBhugaloo__c.field-meta.xml
<CustomField>
    <fullName>IrfanBhugaloo__c</fullName>
    <label>Irfan Bhugaloo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>