force-app/main/default/objects/MyCustomObject__c/fields/JasonRamjaya__c.field-meta.xml
<CustomField>
    <fullName>JasonRamjaya__c</fullName>
    <label>Jason Ramjaya</label>
    <length>255</length>
    <type>Text</type>
</CustomField>