force-app/main/default/objects/MyCustomObject__c/fields/KaniganSomadoo__c.field-meta.xml
<CustomField>
    <fullName>KaniganSomadoo__c</fullName>
    <label>Kanigan Somadoo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>