force-app/main/default/objects/MyCustomObject__c/fields/KenyPoisson__c.field-meta.xml
<CustomField>
    <fullName>KenyPoisson__c</fullName>
    <label>Keny Poisson</label>
    <length>255</length>
    <type>Text</type>
</CustomField>