force-app/main/default/objects/MyCustomObject__c/fields/MaadhavKoonjul__c.field-meta.xml
<CustomField>
    <fullName>MaadhavKoonjul__c</fullName>
    <description>Mo nom</description>
    <label>Maadhav Koonjul</label>
    <length>255</length>
    <type>Text</type>
</CustomField>