force-app/main/default/objects/MyCustomObject__c/fields/MehreenJhummun__c.field-meta.xml
<CustomField>
    <fullName>MehreenJhummun__c</fullName>
    <label>Mehreen Jhummun</label>
    <length>255</length>
    <type>Text</type>
</CustomField>