force-app/main/default/objects/MyCustomObject__c/fields/NarmeenNehor__c.field-meta.xml
<CustomField>
    <fullName>NarmeenNehor__c</fullName>
    <label>Narmeen Nehor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>