force-app/main/default/objects/MyCustomObject__c/fields/RakshakRajjoo__c.field-meta.xml
<CustomField>
    <fullName>RakshakRajjoo__c</fullName>
    <label>Rakshak Rajjoo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>