force-app/main/default/objects/MyCustomObject__c/fields/RayhaanBeeharry__c.field-meta.xml
<CustomField>
    <fullName>RayhaanBeeharry__c</fullName>
    <label>Rayhaan Beeharry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>