force-app/main/default/objects/MyCustomObject__c/fields/SambhavBholah__c.field-meta.xml
<CustomField>
    <fullName>SambhavBholah__c</fullName>
    <label>SambhavBholah</label>
    <length>255</length>
    <type>Text</type>
</CustomField>