force-app/main/default/objects/MyCustomObject__c/fields/SanjanaRamchurun__c.field-meta.xml
<CustomField>
    <fullName>SanjanaRamchurun__c</fullName>
    <label>Sanjana Ramchurun</label>
    <length>255</length>
    <type>Text</type>
</CustomField>