force-app/main/default/objects/MyCustomObject__c/fields/ShidhiBundhooa__c.field-meta.xml
<CustomField>
    <fullName>ShidhiBundhooa__c</fullName>
    <label>Shidhi Bundhooa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>