force-app/main/default/objects/MyCustomObject__c/fields/ShrishtiBeegun__c.field-meta.xml
<CustomField>
    <fullName>ShrishtiBeegun__c</fullName>
    <label>Shrishti Beegun</label>
    <length>255</length>
    <type>Text</type>
</CustomField>