force-app/main/default/objects/MyCustomObject__c/fields/SouhaylJohar__c.field-meta.xml
<CustomField>
    <fullName>SouhaylJohar__c</fullName>
    <label>Souhayl Johar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>