force-app/main/default/objects/MyCustomObject__c/fields/YadhavJeetah__c.field-meta.xml
<CustomField>
    <fullName>YadhavJeetah__c</fullName>
    <label>Yadhav Jeetah</label>
    <length>255</length>
    <type>Text</type>
</CustomField>